config/prow/cluster/monitoring/prometheus_operator_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-operator
  namespace: prow-monitoring
  labels:
    app: prometheus-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus-operator
  template:
    metadata:
      labels:
        app: prometheus-operator
    spec:
      containers:
      - args:
        - --log-level=all
        - --kubelet-service=kube-system/kubelet
        - --prometheus-config-reloader=quay.io/prometheus-operator/prometheus-config-reloader:v0.52.1
        - --namespaces=prow-monitoring
        image: quay.io/prometheus-operator/prometheus-operator:v0.52.1
        name: prometheus-operator
        ports:
        - containerPort: 8080
          name: http
      serviceAccountName: prometheus-operator
