config/prow/cluster/monitoring/pushgateway-proxy_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pushgateway-proxy
  namespace: prow-monitoring
  labels:
    app: pushgateway-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pushgateway-proxy
  template:
    metadata:
      labels:
        app: pushgateway-proxy
    spec:
      containers:
      - name: nginx
        ports:
        - name: http
          containerPort: 8081
        image: nginx:1
        volumeMounts:
        - name: config-volume
          mountPath: /etc/nginx/
      volumes:
      - name: config-volume
        configMap:
          name: pushgateway-proxy-config
