config/prow/cluster/monitoring/alertmanager_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: prow-monitoring
  labels:
    app: alertmanager
spec:
  ports:
  - name: http
    port: 9093
    protocol: TCP
    targetPort: 9093
  selector:
    app.kubernetes.io/name: alertmanager
    alertmanager: prow
