config/prow/cluster/monitoring/blackbox-exporter_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blackbox-exporter
  namespace: prow-monitoring
  labels:
    app: blackbox-exporter
spec:
  type: ClusterIP
  ports:
  - name: blackbox-exporter
    port: 80
    targetPort: 9115
  selector:
    app: blackbox-exporter
