config/prow/cluster/monitoring/grafana_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: prow-monitoring
  labels:
    app: grafana
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  ports:
  - name: http
    port: 3000
    targetPort: http
  selector:
    app: grafana
