config/prow/cluster/monitoring/kube-state-metrics_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-state-metrics
  namespace: prow-monitoring
  labels:
    app: kube-state-metrics
spec:
  clusterIP: None
  ports:
  - name: http-metrics
    port: 8080
    targetPort: http-metrics
  - name: telemetry
    port: 8081
    targetPort: telemetry
  selector:
    app: kube-state-metrics
