config/prow/cluster/monitoring/prometheus_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: prow-monitoring
  labels:
    app: prometheus
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app.kubernetes.io/name: prometheus
    prometheus: prow
  sessionAffinity: ClientIP
