config/prow/cluster/monitoring/pushgateway-proxy_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pushgateway-proxy
  namespace: prow-monitoring
  labels:
    app: pushgateway-proxy
spec:
  type: ClusterIP
  ports:
  - name: pushgateway-proxy
    port: 80
    targetPort: http
  selector:
    app: pushgateway-proxy
