config/prow/cluster/monitoring/pushgateway_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pushgateway
  namespace: prow-monitoring
  labels:
    app: pushgateway
spec:
  type: ClusterIP
  ports:
  - name: pushgateway
    port: 80
    targetPort: http
  selector:
    app: pushgateway
